input: fix overflow in some situations
by reducing the min-width to zero. Inputs do have an implicit minimum
widht, and in certain conditions (e.g. when in table cell that is too
small) it does not look right.

With the reduced min-width, the input can shrink and it looks better.

--- a/scss/_input.scss
+++ b/scss/_input.scss
@@ -8,6 +8,7 @@ input {
     font-family: $pwt-font-sans-serif;
     font-size: map-get($font-size, "label-large");
     line-height: map-get($line-height, "label-large");
+    min-width: 0;
 
     accent-color: var(--pwt-color-#{$default-accent-color});
 
